2010-04-14  Jay Civelli  <jcivelli@chromium.org>

Reviewed by Dimitri Glazkov.

        [chromium] Select popups would assert when destroyed.
        https://bugs.webkit.org/show_bug.cgi?id=37436

        * platform/chromium/PopupMenuChromium.cpp:
        (WebCore::PopupContainer::PopupContainer):
        (WebCore::PopupContainer::showPopup):
        (WebCore::PopupContainer::notifyPopupHidden):
        * platform/chromium/PopupMenuChromium.h:

2010-04-14  Jay Civelli  <jcivelli@chromium.org>

        Reviewed by Dimitri Glazkov.

        [chromium] Select popups would assert when destroyed.
        Also adding unit-tests for the select popup code.
        https://bugs.webkit.org/show_bug.cgi?id=37436

        * WebKit.gyp:
        * src/WebViewImpl.h:
        (WebKit::WebViewImpl::selectPopup):
        * tests/PopupMenuTest.cpp: Added.

Canonical link: https://commits.webkit.org/48887@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@57599 268f45cc-cd09-0410-ab3c-d52691b4dbfc