third_party/WebKit/WebCore/platform/chromium/PopupMenuChromium.h
@@ -149,7 +149,7 @@ public:
     // popups on other platforms.
     void show(const IntRect&, FrameView*, int index);
 
-    // Hide the popup.
+    // Hides the popup.
     void hidePopup();
 
     // The popup was hidden.
@@ -177,6 +177,9 @@ public:
     int menuItemFontSize() const;
 
     PopupType popupType() const { return m_popupType; }
+
+    // Whether the popup is currently open.
+    bool m_popupOpen;
 
 private:
     friend class WTF::RefCounted<PopupContainer>;
